Correcting Abno page ordering

--- a/abnoinfo/Child of the Galaxy.html
+++ b/abnoinfo/Child of the Galaxy.html
@@ -120,7 +120,7 @@
         <a class="next" onclick="nextSlide(1,0)">&#10095;</a>
       </div>
 
-      <p>{abnoName} appears as the second Abnormality on the {Floor of Art}, unlocking {Breakdown Teardrop}, {Awakening Token of Friendship}, and {Breakdown Pebble} after its suppression.</p>
+      <p>{abnoName} appears as the second Abnormality on the {Floor of Art}, unlocking {Breakdown Pebble}, {Breakdown Teardrop}, and {Awakening Token of Friendship} after its suppression.</p>
 
       <p>In its book, {abnoName} is joined by two Friends to the Galaxy. The child does not directly participate in combat, with the Friends fighting in its stead.<br>
       The Friends cannot be killed, and can only be brought down to 1 HP. In order to complete the suppresion, both of the Friends need to be brought down to 1 HP together. If only one of them is brought to this point, it will become Staggered. If the second friend is not dealt lethal damage within two turns of this, the Friend at 1 HP will recover HP equal to its ally.</p>
@@ -224,6 +224,24 @@
             <tr class="breakdown-bg">
               <td class="abno-page-img">
                 <div class="lor-page-img-container">
+                  <a class="display-img" href="../images/abnos/Child of the Galaxy/LoR Pebble.png" data-lightbox="abnopages" data-title="Pebble"><img class="lor-page-img" src="../images/abnos/Child of the Galaxy/LoR Pebble.png"/></a><br>
+                  <span class="abno-page-name">Pebble</span>
+                </div>
+              </td>
+              <td>[Single Ally]<br>At the start of each Scene, three random pages in hand gain the 'Pebble' status.<br>Recover 3-7 HP upon using pages with the Pebble.<br>Lose 1-3 HP upon using pages without the Pebble.<br><span class="abno-page-quote">“Do you like that thing more than me? I know. I know everything about you. Whatever you do, wherever you go.”</span></td>
+              <td>
+                <ul class="abno-page-quote-list">
+                  <li>Why did you visit that friend instead… Do you like them more than you like me?</li>
+                  <li>I treasure you, but you won’t treasure me…</li>
+                  <li>Whatever you do, wherever you go… I’m always watching everything.</li>
+                  <li>If you won’t keep me company, then I don’t need you.</li>
+                  <li>Goodbye, and don’t come back to me again.</li>
+                </ul>
+              </td>
+            </tr>
+            <tr class="breakdown-bg">
+              <td class="abno-page-img">
+                <div class="lor-page-img-container">
                   <a class="display-img" href="../images/abnos/Child of the Galaxy/LoR Teardrop.png" data-lightbox="abnopages" data-title="Teardrop"><img class="lor-page-img" src="../images/abnos/Child of the Galaxy/LoR Teardrop.png"/></a><br>
                   <span class="abno-page-name">Teardrop</span>
                 </div>
@@ -255,25 +273,7 @@
                   <li>You have to stay by my side forever, promise? Don’t forget this.</li>
                 </ul>
               </td>
-            </tr>
-            <tr class="breakdown-bg">
-              <td class="abno-page-img">
-                <div class="lor-page-img-container">
-                  <a class="display-img" href="../images/abnos/Child of the Galaxy/LoR Pebble.png" data-lightbox="abnopages" data-title="Pebble"><img class="lor-page-img" src="../images/abnos/Child of the Galaxy/LoR Pebble.png"/></a><br>
-                  <span class="abno-page-name">Pebble</span>
-                </div>
-              </td>
-              <td>[Single Ally]<br>At the start of each Scene, three random pages in hand gain the 'Pebble' status.<br>Recover 3-7 HP upon using pages with the Pebble.<br>Lose 1-3 HP upon using pages without the Pebble.<br><span class="abno-page-quote">“Do you like that thing more than me? I know. I know everything about you. Whatever you do, wherever you go.”</span></td>
-              <td>
-                <ul class="abno-page-quote-list">
-                  <li>Why did you visit that friend instead… Do you like them more than you like me?</li>
-                  <li>I treasure you, but you won’t treasure me…</li>
-                  <li>Whatever you do, wherever you go… I’m always watching everything.</li>
-                  <li>If you won’t keep me company, then I don’t need you.</li>
-                  <li>Goodbye, and don’t come back to me again.</li>
-                </ul>
-              </td>
-            </tr>
+            </tr>            
           </table>
         </div>
       </div><br>
