--- a/abnoinfo/Funeral of the Dead Butterflies.html
+++ b/abnoinfo/Funeral of the Dead Butterflies.html
@@ -104,7 +104,7 @@
           <div class="caption">{abnoName}<br>in Library of Ruina</div>
       </div>
 
-      <p>{abnoName} appears as the fourth Abnormality on the {Floor of Technology}, unlocking {Awakening Eternal Rest}, {Awakening Lament}, and {Awakening Coffin} after its suppression.</p>
+      <p>{abnoName} appears as the fourth Abnormality on the {Floor of Technology}, unlocking {Awakening Eternal Rest}, {Breakdown Lament}, and {Awakening Coffin} after its suppression.</p>
 
       <p>In its book, {abnoName} is joined by four Kaleidoscopes of Butterflies, each of which is a group of three white butterflies. Funeral's strategy focuses on Staggering its opponents. When a librarian is Staggered, Funeral will put down its coffin in front of it, preparing its Mass Attack, '<span class="workofart">Lament</span>'. This attack will instantly kill any Staggered librarians on hit.</p>
       
@@ -342,7 +342,7 @@
                 </ul>
               </td>
             </tr>
-            <tr class="awakening-bg">
+            <tr class="breakdown-bg">
               <td class="abno-page-img">
                 <div class="lor-page-img-container">
                   <a class="display-img" href="../images/abnos/Funeral of the Dead Butterflies/LoR Lament.png" data-lightbox="abnopages" data-title="Lament"><img class="lor-page-img" src="../images/abnos/Funeral of the Dead Butterflies/LoR Lament.png"/></a><br>
