--- a/abnoinfo/Laetitia.html
+++ b/abnoinfo/Laetitia.html
@@ -104,7 +104,7 @@
           <div class="caption">{abnoName} in Library of Ruina</div>
       </div>
 
-      <p>{abnoName} appears as the fourth Abnormality on the {Floor of Literature}, unlocking {Awakening Surprise Gift}, {Breakdown Funny Prank}, and {Breakdown Friend} after its suppression.</p>
+      <p>{abnoName} appears as the fourth Abnormality on the {Floor of Literature}, unlocking {Awakening Surprise Gift}, {Breakdown Friend}, and {Breakdown Funny Prank} after its suppression.</p>
 
       <p>In the fight, {abnoName} will primarily use defensive moves which will lower the amount of damage it takes while also buffing its allies. It will also use the occasional attack which will add a '<span class="hardcover">Gift</span>' to the target's hand if it hits. It is initially joined by four Gift-wrapped Friends which will also add copies of '<span class="hardcover">Gift</span>' with all their attacks.</p>
       
@@ -429,21 +429,6 @@
             <tr class="breakdown-bg">
               <td class="abno-page-img">
                 <div class="lor-page-img-container">
-                  <a class="display-img" href="../images/abnos/Laetitia/LoR Funny Prank.png" data-lightbox="abnopages" data-title="Funny Prank"><img class="lor-page-img" src="../images/abnos/Laetitia/LoR Funny Prank.png"/></a><br>
-                  <span class="abno-page-name">Funny Prank</span>
-                </div>
-              </td>
-              <td>[Single Ally]<br>The first die of any Combat Page the librarian plays will always roll either the maximum or minimum value.<br>Take 2-7 damage if it rolled the minimum value.<br><span class="abno-page-quote">So the little kid decided to stay until she brings laughter to this gloomy place.</span></td>
-              <td>
-                <ul class="abno-page-quote-list">
-                  <li>I don’t hear any laughter… They all look sad.</li>
-                  <li>I want you to be pleased by my pranks!</li>
-                </ul>
-              </td>
-            </tr>
-            <tr class="breakdown-bg">
-              <td class="abno-page-img">
-                <div class="lor-page-img-container">
                   <a class="display-img" href="../images/abnos/Laetitia/LoR Friend.png" data-lightbox="abnopages" data-title="Friend"><img class="lor-page-img" src="../images/abnos/Laetitia/LoR Friend.png"/></a><br>
                   <span class="abno-page-name">Friend</span>
                 </div>
@@ -453,6 +438,21 @@
                 <ul class="abno-page-quote-list">
                   <li>This place will get livelier the more friends I have!</li>
                   <li>I hope to find lots of friends here too!</li>
+                </ul>
+              </td>
+            </tr>
+            <tr class="breakdown-bg">
+              <td class="abno-page-img">
+                <div class="lor-page-img-container">
+                  <a class="display-img" href="../images/abnos/Laetitia/LoR Funny Prank.png" data-lightbox="abnopages" data-title="Funny Prank"><img class="lor-page-img" src="../images/abnos/Laetitia/LoR Funny Prank.png"/></a><br>
+                  <span class="abno-page-name">Funny Prank</span>
+                </div>
+              </td>
+              <td>[Single Ally]<br>The first die of any Combat Page the librarian plays will always roll either the maximum or minimum value.<br>Take 2-7 damage if it rolled the minimum value.<br><span class="abno-page-quote">So the little kid decided to stay until she brings laughter to this gloomy place.</span></td>
+              <td>
+                <ul class="abno-page-quote-list">
+                  <li>I don’t hear any laughter… They all look sad.</li>
+                  <li>I want you to be pleased by my pranks!</li>
                 </ul>
               </td>
             </tr>
