--- a/abnoinfo/Scarecrow Searching for Wisdom.html
+++ b/abnoinfo/Scarecrow Searching for Wisdom.html
@@ -91,7 +91,7 @@
       <h5 class="profile-subheader">Decks & Pages</h5>
 
       <div class="deck">
-        <button class="deck-header collapsible-btn" onclick="toggleCollapse(this)">{abnoName}' Deck</button>
+        <button class="deck-header collapsible-btn" onclick="toggleCollapse(this)">{abnoName}'s Deck</button>
         <div class="deck-content collapsible-content">
           <div class="row">
             <div class="col-7 lor-page-container">
