--- a/abnoinfo/Warm-hearted Woodsman.html
+++ b/abnoinfo/Warm-hearted Woodsman.html
@@ -98,7 +98,7 @@
         <a class="next" onclick="nextSlide(1,1)">&#10095;</a>
       </div>
 
-      <p>{abnoName} appears as the second Abnormality on the {Floor of Social Sciences}, unlocking {Breakdown A Warm Heart}, {Breakdown Timber}, and {Awakening Cardiae} after its suppression.</p>
+      <p>{abnoName} appears as the second Abnormality on the {Floor of Social Sciences}, unlocking {Breakdown A Warm Heart}, {Awakening Cardiae}, and {Breakdown Timber} after its suppression.</p>
 
       <p>The Woodsman starts the battle sitting idly and only using '<span class="paperback">Empty Chest</span>'. It is also joined by three Trees who only serve to act as fodder for the Woodsman. After the first turn, the Woodsman will kill one of the Trees and gain 3 stacks of {LoR SE b Warm Heart}.</p>
       
@@ -309,6 +309,23 @@
                   <li>The heart is a peculiar thing… I can laugh now…</li>
                 </ul>
               </td>
+            </tr>            
+            <tr class="awakening-bg">
+              <td class="abno-page-img">
+                <div class="lor-page-img-container">
+                  <a class="display-img" href="../images/abnos/Warm-hearted Woodsman/LoR Cardiae.png" data-lightbox="abnopages" data-title="Cardiae"><img class="lor-page-img" src="../images/abnos/Warm-hearted Woodsman/LoR Cardiae.png"/></a><br>
+                  <span class="abno-page-name">Cardiae</span>
+                </div>
+              </td>
+              <td>[Single Ally]<br>After dealing 15 or more damage to enemies in a single Scene, reduce the Cost of the two most expensive pages in hand by 1.<br>On kill, reduce the Cost to 0 instead.<br>The Cost reduction is reset when the pages are used.<br><span class="abno-page-quote">There will never be enough hearts. Once a Woodsman, he now fells people instead of trees.</span></td>
+              <td>
+                <ul class="abno-page-quote-list">
+                  <li>I require an object… to fill this empty void…</li>
+                  <li>I do not want to feel this empty and lonely feeling anymore…</li>
+                  <li>The heart made of lead… was stiff and cold.</li>
+                  <li>I clutched my empty chest and grieved…</li>
+                </ul>
+              </td>
             </tr>
             <tr class="breakdown-bg">
               <td class="abno-page-img">
@@ -324,23 +341,6 @@
                   <li>I want to be warm… I need something stronger…</li>
                   <li>I crammed all I could find into this empty canister… yet it is… still cold…</li>
                   <li>To cut more trees, I never neglected sharpening the axe…</li>
-                </ul>
-              </td>
-            </tr>
-            <tr class="awakening-bg">
-              <td class="abno-page-img">
-                <div class="lor-page-img-container">
-                  <a class="display-img" href="../images/abnos/Warm-hearted Woodsman/LoR Cardiae.png" data-lightbox="abnopages" data-title="Cardiae"><img class="lor-page-img" src="../images/abnos/Warm-hearted Woodsman/LoR Cardiae.png"/></a><br>
-                  <span class="abno-page-name">Cardiae</span>
-                </div>
-              </td>
-              <td>[Single Ally]<br>After dealing 15 or more damage to enemies in a single Scene, reduce the Cost of the two most expensive pages in hand by 1.<br>On kill, reduce the Cost to 0 instead.<br>The Cost reduction is reset when the pages are used.<br><span class="abno-page-quote">There will never be enough hearts. Once a Woodsman, he now fells people instead of trees.</span></td>
-              <td>
-                <ul class="abno-page-quote-list">
-                  <li>I require an object… to fill this empty void…</li>
-                  <li>I do not want to feel this empty and lonely feeling anymore…</li>
-                  <li>The heart made of lead… was stiff and cold.</li>
-                  <li>I clutched my empty chest and grieved…</li>
                 </ul>
               </td>
             </tr>
