Gaze of Others - All > Single correction

--- a/abnoinfo/The Burrowing Heaven.html
+++ b/abnoinfo/The Burrowing Heaven.html
@@ -336,7 +336,7 @@
                   <span class="abno-page-name">Gaze of Others</span>
                 </div>
               </td>
-              <td>[All Allies]<br>Deal +2-4 damage in a one-sided attack.<br>In a clash, deal 3-6 less damage with attacks, but Block dice gain 1-3 Power.<br><span class="abno-page-quote">That's what a gaze is. Attention. An invisible string that connects us. Full focus.</span></td>
+              <td>[Single Ally]<br>Deal +2-4 damage in a one-sided attack.<br>In a clash, deal 3-6 less damage with attacks, but Block dice gain 1-3 Power.<br><span class="abno-page-quote">That's what a gaze is. Attention. An invisible string that connects us. Full focus.</span></td>
               <td>
                 <ul class="abno-page-quote-list">
                   <li>If you can’t see it, you can’t reach it.</li>
