Big and Might be Bad Wolf's page

--- a/abnoinfo/Little Red Riding Hooded Mercenary.html
+++ b/abnoinfo/Little Red Riding Hooded Mercenary.html
@@ -34,7 +34,7 @@
       
       <p>Its Qliphoth Counter starts at 3.<br>It will decrease by 1 each time an Abnormality escapes. Upon reaching 0 this way, {abnoName} breaches containment and marks the first entity it sees as its target. It will relentlessly chase down the target, not directly damaging other entities though they may still get hurt if caught in its attacks. Once it eliminates its target, it will select the next entity it sees as its new target.</p>
 
-      <p>If Red Hood crosses paths with the Wolf at any point, it will enter an enraged state dealing increased damage and faster movement speed. The same will occur if the Wolf passes by its containment unit which will cause Red Hood to instantly breach containment. It will exclusively focus on the Wolf, ignoring any other entities but still dealing damage to them if they are caught in the crossfire.<br>
+      <p>If Red Hood crosses paths with the Wolf at any point, it will enter an enraged state dealing increased damage and faster movement speed. The same will occur if the Wolf howls near its containment unit which will cause Red Hood to instantly breach containment. It will exclusively focus on the Wolf, ignoring any other entities but still dealing damage to them if they are caught in the crossfire.<br>
       Once Red Hood successfully suppressed the Wolf, it will willingly return to its containment unit. If the Wolf is instead suppressed by someone else, Red Hood will remain escaped and its attack power and movement speed will further increase.</p>
 
       <h5 class="profile-subheader">Managerial Guidelines</h5>
@@ -42,9 +42,9 @@
         <li>{abnoName} can be requested to suppress escaped Abnormalities or Ordeals. However, the request will be not be free.</li>
         <li>When an employee who had previously worked with <a href="profile.html?abno=Big and Might be Bad Wolf">F-02-58</a> finished the work, the Qliphoth Counter decreased.</li>
         <li>Every time another Abnormality escaped, the Qliphoth Counter decreased. However, it ignored the escape of <a href="profile.html?abno=Punishing Bird">O-02-56</a>.</li>
-        <li>When <a href="profile.html?abno=Big and Might be Bad Wolf">F-02-58</a> howled near {abnoName}'s containment unit, the Qliphoth Counter dropped to 0.</li>
-        <li>When encountering <a href="profile.html?abno=Big and Might be Bad Wolf">F-02-58</a>, {abnoName} became even more aggressive.</li>
-        <li>When someone other than {abnoName} suppressed <a href="profile.html?abno=Big and Might be Bad Wolf">F-02-58</a>, it went into a fury and began attacking those around it indiscriminately.</li>
+        <li>When F-02-58 howled near {abnoName}'s containment unit, the Qliphoth Counter dropped to 0.</li>
+        <li>When encountering F-02-58, {abnoName} became even more aggressive.</li>
+        <li>When someone other than {abnoName} suppressed F-02-58, it went into a fury and began attacking those around it indiscriminately.</li>
       </ul>
 
       <h5 class="profile-subheader">Abnormality Story</h5>
@@ -333,13 +333,13 @@
                   <a class="display-img" href="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Idle.png" data-lightbox="LoR2" data-title="Idle"><img class="enemy-info-sprite slide" src="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Idle.png"/></a>
                 </div>
                 <div class="slide notfirst slides2">
-                  <a class="display-img" href="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Attack.png" data-lightbox="LoR2" data-title="Attacking"><img class="enemy-info-sprite slide" src="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Attack.png"/></a>
+                  <a class="display-img" href="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Slash Attack.png" data-lightbox="LoR2" data-title="Attacking"><img class="enemy-info-sprite slide" src="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Slash Attack.png"/></a>
                 </div>
                 <div class="slide notfirst slides2">
-                  <a class="display-img" href="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Attack 2.png" data-lightbox="LoR2" data-title="Attacking"><img class="enemy-info-sprite slide" src="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Attack 2.png"/></a>
+                  <a class="display-img" href="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Pierce Attack.png" data-lightbox="LoR2" data-title="Attacking"><img class="enemy-info-sprite slide" src="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Pierce Attack.png"/></a>
                 </div>
                 <div class="slide notfirst slides2">
-                  <a class="display-img" href="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Mass Attack.png" data-lightbox="LoR2" data-title="Howling"><img class="enemy-info-sprite slide" src="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Mass Attack.png"/></a>
+                  <a class="display-img" href="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Howl.png" data-lightbox="LoR2" data-title="Howling"><img class="enemy-info-sprite slide" src="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Howl.png"/></a>
                 </div>
                 <div class="slide notfirst slides2">
                   <a class="display-img" href="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Move.png" data-lightbox="LoR2" data-title="Moving"><img class="enemy-info-sprite slide" src="../images/abnos/Little Red Riding Hooded Mercenary/Nightmare/LoR Move.png"/></a>
@@ -445,7 +445,7 @@
       <hr class="header-seperator">
       <div class="abno-gallery">
         <a class="display-img" href="../images/abnos/Little Red Riding Hooded Mercenary/LC Idle.gif" data-lightbox="gallery" data-title="Idle Animation<br>(Lobotomy Corporation)"><img class="gallery-img" src="../images/abnos/Little Red Riding Hooded Mercenary/LC Idle.gif"/></a>
-        <a class="display-img" href="../images/abnos/Little Red Riding Hooded Mercenary/LC Breached Idle.gif" data-lightbox="gallery" data-title="Idle Animation while Breached<br>(Lobotomy Corporation)"><img class="gallery-img" src="../images/abnos/Little Red Riding Hooded Mercenary/LC Breached Idle.gif"/></a>        
+        <a class="display-img" href="../images/abnos/Little Red Riding Hooded Mercenary/LC Breached Idle.gif" data-lightbox="gallery" data-title="Idle Animation while Breached<br>(Lobotomy Corporation)"><img class="gallery-img" src="../images/abnos/Little Red Riding Hooded Mercenary/LC Breached Idle.gif"/></a>
         <a class="display-img" href="../images/abnos/Little Red Riding Hooded Mercenary/LC Attack.gif" data-lightbox="gallery" data-title="Attack Animations<br>(Lobotomy Corporation)"><img class="gallery-img" src="../images/abnos/Little Red Riding Hooded Mercenary/LC Attack.gif"/></a>
         <a class="display-img" href="../images/abnos/Little Red Riding Hooded Mercenary/LC Shoot.gif" data-lightbox="gallery" data-title="Firing the pistol<br>(Lobotomy Corporation)"><img class="gallery-img" src="../images/abnos/Little Red Riding Hooded Mercenary/LC Shoot.gif"/></a>
         <a class="display-img" href="../images/abnos/Little Red Riding Hooded Mercenary/LC Shoot Walk.gif" data-lightbox="gallery" data-title="Firing both pistols<br>(Lobotomy Corporation)"><img class="gallery-img" src="../images/abnos/Little Red Riding Hooded Mercenary/LC Shoot Walk.gif"/></a>
