3rd EGO for Wayward Passenger

--- a/abnoinfo/Wayward Passenger.html
+++ b/abnoinfo/Wayward Passenger.html
@@ -13,6 +13,7 @@
         <a class="display-img" href="../images/abnos/Wayward Passenger/LCB MD.png" data-lightbox="LCB" data-title="Mirror Dungeon Event"><img class="gallery-img" src="../images/abnos/Wayward Passenger/LCB MD.png"/></a>
         <a class="display-img" href="../images/abnos/Wayward Passenger/LCB EGO 1.png" data-lightbox="LCB" data-title="E.G.O"><img class="gallery-img" src="../images/abnos/Wayward Passenger/LCB EGO 1.png"/></a>
         <a class="display-img" href="../images/abnos/Wayward Passenger/LCB EGO 2.png" data-lightbox="LCB" data-title="E.G.O"><img class="gallery-img" src="../images/abnos/Wayward Passenger/LCB EGO 2.png"/></a>
+        <a class="display-img" href="../images/abnos/Wayward Passenger/LCB EGO 3.png" data-lightbox="LCB" data-title="E.G.O"><img class="gallery-img" src="../images/abnos/Wayward Passenger/LCB EGO 3.png"/></a>
         <a class="display-img" href="../images/abnos/Wayward Passenger/LCB BG.png" data-lightbox="LCB" data-title="Battle Background"><img class="gallery-img" src="../images/abnos/Wayward Passenger/LCB BG.png"/></a>
       </div>
     </section>
